fixed environment selector to toggle showing and not showing when clicking on environment, added more api calls, need to work on eoSecurityCheck

--- a/css/styles.css
+++ b/css/styles.css
@@ -480,7 +480,7 @@ h4 {
 	background: red;
 }
 
-#workspaceframe{
+#workspaceframe, #eosecuritycheckframe{
 		background: white;
 		width: 100%;
 		height: 90%;
